# VOD-Platform-Customer-Retention-Analytics

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: README.md
dashboard/: README.md
data/: README.md
docs/: README.md
docs/decisions/: README.md
notebooks/: README.md
reports/: README.md
scripts/: README.md
sql/: README.md
src/vod_retention/: __init__.py
src/vod_retention/analysis/: __init__.py
src/vod_retention/features/: __init__.py
src/vod_retention/selection/: __init__.py
tests/: README.md  test_package.py
