[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vod-retention-analytics"
version = "0.1.0"
description = "Explainable customer-retention and movie-acquisition analytics for a transactional VOD platform"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { file = "LICENSE" }
dependencies = [
    "duckdb>=1.1,<2",
    "jupyterlab>=4,<5",
    "matplotlib>=3.8,<4",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "plotly>=5.20,<7",
    "pyarrow>=15,<24",
    "scikit-learn>=1.4,<2",
    "scipy>=1.12,<2",
    "seaborn>=0.13,<1",
    "statsmodels>=0.14,<1",
    "streamlit>=1.32,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.8,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
